# ai-personal-content-universe-app

./: .gitignore  README.md
ai_personal_content_app/: README.md  pubspec.yaml
ai_personal_content_app/android/app/: build.gradle.kts
ai_personal_content_app/android/app/src/main/: AndroidManifest.xml
ai_personal_content_app/ios/Runner/: Info.plist
ai_personal_content_app/ios/Runner.xcodeproj/: project.pbxproj
ai_personal_content_app/lib/: get_it.dart  main.dart  objectbox-model.json  objectbox.g.dart  router.dart
ai_personal_content_app/lib/core/api/: api_client.dart  api_routes.dart  exceptions.dart  logger.dart
ai_personal_content_app/lib/core/common/: functions.dart
ai_personal_content_app/lib/core/common/services/: embedding_generation_service.dart  embeddings_storage_service.dart
ai_personal_content_app/lib/core/configs/: objectbox_config.dart
ai_personal_content_app/lib/core/theme/: app_colors.dart  app_svgs.dart
ai_personal_content_app/lib/core/utils/: utils.dart
ai_personal_content_app/lib/features/auth/screens/: onboarding_screen.dart
ai_personal_content_app/lib/features/home/models/: content_embedding_response_model.dart  content_embedding_response_model.freezed.dart  content_embedding_response_model.g.dart  (+1 more)
ai_personal_content_app/test/: widget_test.dart
backend/: README.md  main.py  pyproject.toml
backend/src/: main.py
backend/src/api/: auth_router.py  content_operations_router.py
backend/src/core/: api_constants.py
backend/src/schemas/: content_operations_schemas.py
backend/src/services/: content_services.py
(+28 files in other folders)
